--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="field">
       <%= f.label :length %> <br />
-      <%= f.number_field :length, max: 120, min:0 %>  <i>minutes</i>
+    <%= f.number_field :length, max: 120, min: 1, value: 20 %>  <i> minutes </i>
   </div>
   <div class="field">
     <%= f.label :description %><br />
