--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,16 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+
+.alert-error {
+  @extend .alert-danger
+}
+
+.alert-notice {
+  @extend .alert-info
+}
+
+.alert-alert {
+  @extend .alert-warning
+}
