--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,6 @@
 <h2>Change Password</h2>
+<%= current_user.name %>
+<%= current_user.email %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -30,3 +32,5 @@
   </div>
 <% end %>
 <p><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "My Tests", all_tests_path, method: :get %></p>
+<p><%= button_to "My Submissions", submissions_path, method: :get %></p>
