--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
       <li>
         <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
       </li>
+      <li>
+        <%= link_to(current_user.name, edit_user_registration_path(current_user)) %>
+      </li>
   <% else %>
       <li>
         <%= link_to('Login', new_user_session_path) %>
@@ -22,8 +25,10 @@
   <% end %>
 </ul>
 <div class="container">
-  <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
+  <% [:success, :warning, :danger, :info, :error, :notice, :alert].each do |key| %>
+      <% if flash.key? key %>
+          <div class="alert alert-<%= key %>"><%= flash[key] %></div>
+      <% end %>
   <% end %>
   <%= yield %>
 </div>
