--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -14,6 +14,10 @@
       <%= f.label :question_text %><br/>
       <%= f.cktext_area :question_text, :ckeditor => {:toolbar => 'mini'} %>
     </div>
+    <div>
+      <%= f.label :point %><br/>
+      <%= f.number_field :point, value: 1, min: 1, max: 10 %>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
