--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,37 @@
-<h2>Sign up</h2>
+<div class="row">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form-horizontal'}) do |f| %>
+      <h2 class="col-sm-offset-3 col-sm-9">Sign up</h2>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+      <div class="form-group">
+        <%= f.label :email, "Email Address", class: 'control-label col-sm-3' %>
+        <div class="col-sm-6">
+          <%= f.email_field :email, required: true, autofocus: true, placeholder: "Email address", class: 'form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :name, "Your Name", class: 'control-label col-sm-3' %>
+        <div class="col-sm-6">
+          <%= f.text_field :name, required: true, placeholder: "Your Name", class: 'form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :password, class: 'control-label col-sm-3' %>
+        <div class="col-sm-6">
+          <%= f.password_field :password, autocomplete: "off", required: true, placeholder: 'Password', class: 'form-control' %>
+        </div>
+      </div>
 
-    <div class="field">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, required: true,autofocus: true %>
-    </div>
-    <div class="field">
-      <%= f.label :name %><br/>
-      <%= f.text_field :name, required: true%>
-    </div>
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br/>
-      <%= f.password_field :password, autocomplete: "off" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: 'control-label col-sm-3' %>
+        <div class="col-sm-6">
+          <%= f.password_field :password_confirmation, autocomplete: "off", reqired: true, placeholder: 'Confirm your Password', class: 'form-control' %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-2">
+          <%= f.submit "Sign up", class: 'btn btn-lg btn-success btn-block' %>
+        </div>
+      </div>
+  <% end %>
+</div>
