--- a/app/views/tests/_show.html.erb
+++ b/app/views/tests/_show.html.erb
@@ -1,19 +1,20 @@
-<p>
-  <strong>Test setter</strong>
-  <%= @test.user[:name] %>
-</p>
+<div>
+  <div class="form-group">
+    <strong>Test setter</strong>
+    <%= @test.user[:name] %>
+  </div>
+  <div class="form-group">
+    <strong>Title:</strong>
+    <%= @test.title %>
+  </div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @test.title %>
-</p>
+  <div class="form-group">
+    <strong>Description:</strong>
+    <%= raw(@test.description) %>
+  </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= raw(@test.description) %>
-</p>
-
-<p>
-  <strong>Length:</strong>
-  <%= @test.length %>
-</p>
+  <div class="form-group">
+    <strong>Length:</strong>
+    <%= pluralize(@test.length, 'minute') %>
+  </div>
+</div>
