--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -1,34 +1,57 @@
-<%= render 'show' %>
-<% if current_user == @test.user %>
-    <%= button_to 'Edit Test', edit_test_path(@test), method: :get %>
-    <%= button_to 'Add Question', new_test_question_path(@test), method: :get %>
-    <ol type="1">
-      <% @test.questions.each do |question| %>
-          <li>
-            <div class="question" id="<%= question.id %> ">
-              <%= raw(question[:question_text]) %>
-              <%= button_to 'Edit question', edit_test_question_path(@test, question), method: "get" %>
-              <%= button_to "Add Answer", new_test_question_answer_path(@test, question), method: "get" %>
-              <ol type="A">
-                <% question.answers.each do |answer| %>
-                    <div class="answer" id="<%= answer.id %>">
-                      <li class="text-<%= answer[:correct] ? 'success' : 'danger' %>">
-                        <%= raw(answer[:description]) %>
-                        <%= button_to 'Edit answer', edit_test_question_answer_path(@test, question, answer), method: "get" %>
-                      </li>
-                    </div>
-                <% end %>
-              </ol>
-            </div>
-          </li>
-      <% end %>
-    </ol>
-    <%= button_to "Done", done_test_path(@test), method: 'patch' %>
-    <% if @test.public.blank? %>
-        <%= link_to raw("#{icon('globe', class: 'fa-2x btn')}#{icon('lock', class: 'fa-2x btn active')}"), flip_test_path(@test), method: :patch, remote: true %>
-    <% else %>
-        <%= link_to raw("#{icon('globe', class: 'fa-2x btn active')}#{icon('lock', class: 'fa-2x btn')}"), flip_test_path(@test), method: :patch, remote: true %>
+<div class="row">
+  <%= render 'show' %>
 
-    <% end %>
-<% end %>
-
+  <% if current_user == @test.user %>
+      <div>
+        <div class="col-sm-3">
+          <%= button_to 'Edit Test', edit_test_path(@test), method: :get, class: 'btn btn-default' %>
+        </div>
+        <div class="col-sm-3">
+          <%= button_to 'Add Question', new_test_question_path(@test), method: :get, class: 'btn btn-default' %>
+        </div>
+        <div class="col-sm-6">
+        </div>
+        <div class="col-sm-12">
+          <ol type="1">
+            <% @test.questions.each do |question| %>
+                <li>
+                  <div class="question" id="<%= question.id %> ">
+                    <%= raw(question[:question_text]) %>
+                    <%= link_to 'Edit question', edit_test_question_path(@test, question), method: "get", class: 'btn btn-default' %>
+                    <%= link_to "Add Answer", new_test_question_answer_path(@test, question), method: "get", class: 'btn btn-default' %>
+                    <ol type="A">
+                      <% question.answers.each do |answer| %>
+                          <div class="answer" id="<%= answer.id %>">
+                            <li class="text-<%= answer[:correct] ? 'success' : 'danger' %>">
+                              <%= raw(answer[:description]) %>
+                              <%= link_to 'Edit answer', edit_test_question_answer_path(@test, question, answer), method: "get", class: 'btn btn-default' %>
+                            </li>
+                          </div>
+                      <% end %>
+                    </ol>
+                  </div>
+                </li>
+            <% end %>
+          </ol>
+        </div>
+        <div class="col-sm-12">
+          <%= link_to "Update", done_test_path(@test), method: 'patch', class: 'btn btn-primary' %>
+          <% if @test.public.blank? %>
+              <%= link_to raw(icon('globe')), flip_test_path(@test), method: :patch, remote: true, class: 'btn btn-info ', id: 'publicBtn' %>
+          <% else %>
+              <%= link_to raw(icon('globe')), flip_test_path(@test), method: :patch, remote: true, class: 'btn btn-info active', id: 'publicBtn' %>
+          <% end %>
+          <%= link_to raw(icon('trash-o')), @test, method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+        </div>
+      </div>
+  <% end %>
+  <div class="input-group col-sm-4">
+    <input readonly id="submissionLink" value="<%= new_test_submission_url(@test) %>" class="form-control ">
+    <span class="input-group-addon" data-clipboard-target="#submissionLink">
+      <%= icon('clipboard') %>
+    </span>
+  </div>
+</div>
+<script>
+  new Clipboard('.btn');
+</script>
