--- a/app/views/answers/new.js.erb
+++ b/app/views/answers/new.js.erb
@@ -1,1 +1,1 @@
-$("#question_<%=@question.id%>").append("<li> <%= j render 'form' %> </li>");
+$("#question_<%=@question.id%>").prepend("<li> <%= j render 'form' %> </li>");
